--- a/.github/workflows/ruby.yml
+++ b/.github/workflows/ruby.yml
@@ -74,7 +74,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        ruby: ['2.5', 'jruby-9.2.9.0']
+        ruby: ['2.5', '2.6', '2.7', '3.0', 'jruby-9.2.9.0', 'jruby-9.2.13.0']
     steps:
       - uses: actions/checkout@v2
       - uses: ruby/setup-ruby@v1
