[rb] fix #8525 by limiting concurrent sessions in test to the number of processors detected

--- a/rb/.rubocop.yml
+++ b/rb/.rubocop.yml
@@ -107,8 +107,7 @@ RSpec/AnyInstance:
   Enabled: false
 
 RSpec/BeforeAfterAll:
-  Exclude:
-    - 'spec/unit/selenium/webdriver/socket_poller_spec.rb'
+  Enabled: false
 
 RSpec/ContextWording:
   Enabled: false
